syntax = "proto3";

option csharp_namespace = "AuthService";

package greet;

service Greeter {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
}
message RegisterRequest {
   string first_name = 1;
    string last_name = 2;
    string username = 3;
    string password = 4;
    string confirm_password = 5;
    string email = 6;
}

message RegisterResponse {
    User user = 1;
}
message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    string email = 5;
}
